--- a/src/app/shared/task-card-modal/task-card-modal.component.scss
+++ b/src/app/shared/task-card-modal/task-card-modal.component.scss
@@ -48,14 +48,12 @@
   }
 
   &.edit {
-    height: auto;
     height: 90vh;
   }
 }
 
 .modal-content {
   position: relative;
-  height: 100%;
   width: 96%;
   margin: auto;
   padding: 24px;
@@ -63,7 +61,6 @@
 
   &.edit {
     padding: 12px;
-    height: 98%;
     width: 96%;
   }
 
